M       cat_vol_isarnlm.m
M       cat_vol_sanlm.m
M       internal/cat_vol_nlmus.m

Added*:   Update SANLM filter with a (automatic) global strength parameter.
Fixed*:   Corrected error in gintnorm for small values.
Fixed:    Corrected rounding error in nlmus.
Fixed:    Corrected background problem if msk field is used in the SPM
          preprocessing.
Added:    Parallel output of Ym class maps pi#*.nii in developer mode (expertgui>1) 
Added:    Output of PID in parallel processing to kill zombies. 


------------------------------------------------------------------------
r904 | dahnke | 2016-03-18 13:50:19 +0100 (Fr, 18 Mär 2016) | 15 lines

Changed paths:
M       CHANGES.txt
M       cat_defaults.m
M       cat_io_report.m
MM      cat_io_senderrormail.m
M       cat_main.m
M       cat_vol_isarnlm.m
M       cat_vol_sanlm.m
 M      html/cat_methods_caterrorreporthelp.html
 M      html/cat_methods_catreporthelp.html

Changed:  Refined noise estimation in cat_vol_sanlm and cat_main. 
Added:    Verbose output in cat_vol_sanlm.
Fixed:    Error in error report generation.

------------------------------------------------------------------------
r905 | gaser | 2016-03-18 16:34:50 +0100 (Fr, 18 Mär 2016) | 18 lines

Changed paths:
M       CAT12-Manual.doc
M       CAT12-Manual.pdf
M       CHANGES.txt
M       Contents.m
M       cat12.fig
M       cat12.m
M       cat_io_senderrormail.m
M       html/cat.html
M       html/cat.txt
M       html/cat_methods_QA.html
M       html/cat_methods_VBM.html

Changed: Updated html text.
Changed: Updated manual.
Changed: Added "Send Error" button to GUI.


------------------------------------------------------------------------

Changed paths:
M       CHANGES.txt
M       cat_main.m
M       cat_main_LAS.m
M       cat_parallelize.m
M       cat_vol_isarnlm.m
M       cat_vol_sanlm.m

Fixed:  Problems with sanlm filter strength.
------------------------------------------------------------------------
r906 | dahnke | 2016-03-18 18:22:57