@@ -10092,6 +10092,7 @@ Changed: Added "Send Error" button to GUI.
 
 
 ------------------------------------------------------------------------
+r906 | dahnke | 2016-03-18 18:23:10 +0100 (Fr, 18 Mär 2016) | 10 lines
 
 Changed paths:
 M       CHANGES.txt
@@ -10102,5 +10103,14 @@ M       cat_vol_isarnlm.m
 M       cat_vol_sanlm.m
 
 Fixed:  Problems with sanlm filter strength.
+
 ------------------------------------------------------------------------
-r906 | dahnke | 2016-03-18 18:22:57
+
+Changed paths:
+M       CHANGES.txt
+M       cat_main.m
+M       cat_vol_sanlm.m
+
+Changed: Increased filter strength for adaptive NLM-filtering.
+------------------------------------------------------------------------
+r907 | gaser | 2016-03-21 10:19:56
